# Global-Entry-Appointment-Alert

./: .env.example  .replit  README.md  config.py  main.py  notifier.py  pyproject.toml  slot_checker.py  test_slot_checker.py  utils.py
attached_assets/: Pasted-package-main-import-bufio-encoding-json-fmt-github-com-gen2brain-beeep-github-com-s-1739543137827.txt  Pasted-package-main-import-encoding-json-errors-io-net-http-strings-testing-time--1739543188857.txt
