[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "twilio>=9.4.5",
    "urllib3>=2.3.0",
]
